k8s/overlays/dev/patch-backend-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: digital-library
spec:
  template:
    spec:
      containers:
        - name: backend
